# rust-blinky-orchestrator

./: .gitignore  CLAUDE.md  LICENSE  README.md
c-blinky/: README.md
c-blinky/src/: main.c
docs/: progress.md  task.md
examples/sample-logs/: orchestrator.jsonl
orchestrator/: .gitignore  pyproject.toml
orchestrator/src/orchestrator/: cli.py  core.py  logger.py
rust-blinky/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  dt-rust.yaml
rust-blinky/src/: lib.rs
